--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -10,11 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.6.1",
     "axios": "^1.8.4",
+    "dotenv": "^16.4.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.4.0",
+    "redux": "^5.0.1",
+    "redux-thunk": "^3.1.0",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
@@ -30,6 +35,6 @@
     "globals": "^15.9.0",
     "postcss": "^8.4.41",
     "tailwindcss": "^3.4.10",
-    "vite": "^5.4.1"
+    "vite": "^6.2.3"
   }
 }
