--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -10,9 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.1.2",
     "@reduxjs/toolkit": "^2.6.1",
     "axios": "^1.8.4",
+    "class-variance-authority": "^0.7.1",
     "dotenv": "^16.4.7",
+    "framer-motion": "^12.6.2",
+    "lucide-react": "^0.484.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
@@ -20,6 +24,7 @@
     "react-router-dom": "^7.4.0",
     "redux": "^5.0.1",
     "redux-thunk": "^3.1.0",
+    "tailwind-variants": "^1.0.0",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
